[gd_scene load_steps=4 format=3 uid="uid://bok25g4kigywj"]

[ext_resource type="FontFile" uid="uid://bv555xdulv7wx" path="res://assets/fonts/OpenSans_Condensed-Bold.ttf" id="1_1rqcq"]
[ext_resource type="Script" path="res://scene/ui/hud/hud.gd" id="1_pqr52"]
[ext_resource type="FontFile" uid="uid://bkoirsnt2p76n" path="res://assets/fonts/OpenSans_Condensed-Regular.ttf" id="2_3iktr"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pqr52")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 62.0
offset_top = -200.0
offset_right = 510.0
offset_bottom = -24.0
grow_vertical = 0
color = Color(0, 0, 0, 0.164706)

[node name="HealthUI" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -57.0
offset_right = -41.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_1rqcq")
theme_override_font_sizes/font_size = 36
text = "Health: 100"
horizontal_alignment = 2

[node name="WeaponUI" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -239.0
offset_top = 5.0
offset_right = -39.0
offset_bottom = 58.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_3iktr")
theme_override_font_sizes/font_size = 36
text = "Pistol: 25/100"
horizontal_alignment = 2

[node name="Display" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 1.0
offset_right = 218.0
grow_vertical = 2
color = Color(0, 0, 0, 0.352941)

[node name="WeaponSlotUI" type="Label" parent="Background/Display"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -55.0
offset_right = 60.0
offset_bottom = -7.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_1rqcq")
theme_override_font_sizes/font_size = 32
text = "1
"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect3" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -15.0
offset_right = 5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.419608)

[node name="ColorRect4" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -5.0
offset_right = 15.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.419608)

[node name="ColorRect5" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -5.0
offset_right = -5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.419608)

[node name="ColorRect6" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = 5.0
offset_right = 5.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.419608)
